# openmadrigal_sql

./: CITATION.cff  README.md  authors.txt  license.txt
madroot/: MANIFEST  MANIFEST_EXP  MANIFEST_GEO  MANIFEST_millstone  Makefile.gnu  cachedFiles.ini  checkConfig.py  configureExperiments  configureScripts.py  configureScripts_millstone  configureScripts_millstone.py  configureSource.py  installMadPy  installMadrigal  madrigal.cfg.template  required_modules.txt  setPermissions.py  siteIndex.html  testRequirements.py
madroot/hdf5_examples/: jul20100519_esf.hdf5  plot_madrigal_file_examples.ipynb  plot_madrigal_file_examples.py  recarray_ex.py
madroot/source/: Makefile.am  Makefile_millstone.am  configure.ac  configure_millstone.ac
madroot/source/madc/include/: cedar.h  cedarIO.h  geometry.h  madDeriveMethods.h  maddata.h  madrec.h  scanpl.h
madroot/source/madc/madrec/: Makefile.am  cedar.c  cedarIO.c  date.c  geometry.c  madDeriveEngine.c  madDeriveMethods.c  maddata.c  maddataF77.c  madrec.c  madrecF77.c  solpos.c  testCedarIO.c  testCedarIOBoundaries.c  testCedarMemIO.c  testCreateRecord.c  testGeometry.c  testMadrec.c  testMadrecMemIO.c  testMadrecRand.c  testMadrecRandomFileIO.c  testMadrecSequentialFileIO.c  testParmArray.c  testTrace.c  translateCedarFile.c
madroot/source/madc/testF77/: Makefile.am  Makefile.gnu  Makefile.purify  Makefile.solaris  tmaddataF77.f  tmaddataF77_64.f  tmaddata_nofile_F77.f
madroot/source/madf/: remake_file
madroot/source/madf/applications/: Makefile.am  looker1.f
madroot/source/madf/geolib/: Geopack_2005.f  Geopack_2008.f  Makefile.am  Makefile.gnu  Makefile.purify  Makefile.solaris  TS04.f  altitude_to_cgm.f  basis.f  basis.h  basis1.h  basis3.h  basis4.h  calndr.f  carmel.f  cgm_to_altitude.f  cira.f  cnv_sec_mdhms.f  cnvcoord.f  conduct.f  coord.f  coordf.f  coordff.f  dater.f  dates.f  diplat.f  dsf.f  eqn_of_time.f  gaspct.f  gdmag.f  gdran.f  gdv.f  geo-cgm.f  gmet.f  gmetbv.f  gtd7.f  gts5.f  hfun.f  iday.f  idmyck.f  (+47 more)
madroot/source/madf/geolib/3D4DCoef/: AMCoef4DNe.out  AMCoef4DTe.out  AMCoef4DTi.out  M2Coef3DNe.out  M2Coef3DTe.out  M2Coef3DTi.out  MHCoef3DNe.out  MHCoef3DTe.out  MHCoef3DTi.out  MHCoef3DVo.out
madroot/source/madf/madrigalWeb/: madrigal_web.f95  testMadrigalWeb.f95
madroot/source/madpy/: pyproject.toml  setup.py
madroot/source/madpy/djangoMad/: manage.py  manage_cedar.py
madroot/source/madpy/djangoMad/apps/cedar/: forms.py  urls.py  views.py
madroot/source/madpy/djangoMad/apps/cedar/templates/: admin.html  exp_notes.html  get_log_admin.html  get_video_tutorials.html  madDownload.html  openmadrigal.html  service.html
madroot/source/madpy/djangoMad/bootstrap_calendar/: pyproject.toml  requirements.txt  setup.py
madroot/source/madpy/djangoMad/bootstrap_calendar/django_bootstrap_calendar/: models.py  urls.py
madroot/source/madpy/djangoMad/bootstrap_calendar/django_bootstrap_calendar.egg-info/: PKG-INFO
madroot/source/madpy/djangoMad/bootstrap_calendar/django_bootstrap_calendar/templates/: base.html
madroot/source/madpy/djangoMad/django-bootstrap3-datetimepicker-2.2.3/: pyproject.toml
madroot/source/madpy/djangoMad/djangoMad/: settings.py  settings_cedar.py  settings_cedar_production.py  settings_production.py  settings_production_template.py  urls.py  urls_cedar.py  wsgi.py  wsgi_virtual_env.py
madroot/source/madpy/djangoMad/madweb/: forms.py  urls.py  views.py
madroot/source/madpy/djangoMad/madweb/static/bootstrap_calendar/js/: bootstrap_calendar.js
madroot/source/madpy/djangoMad/madweb/static/siteSpecific/: Readme.txt
madroot/source/madpy/djangoMad/madweb/templates/madweb/: ad_appropriate.html  ad_createExp.html  ad_createFiles.html  ad_experiments.html  ad_install.html  ad_isprint.html  ad_links.html  ad_logging.html  ad_metadata.html  ad_other.html  ad_upgrade.html  admin.html  advanced_print.html  calendar.html  categories.html  choose_script.html  dev_contents.html  dev_derivation.html  download_adv_parms_filters_script.html  download_adv_parms_script.html  download_advanced_script.html  download_as_is.html  download_as_is_script.html  download_files_script.html  exp_list.html  fileDownload.js  file_buttons.html  file_list.html  filter_desc.html  ftp_files.html  ftp_formats.html  ftp_instruments.html  ftp_kindats.html  ftp_years.html  generate_download_advanced_javascript.html  generate_download_javascript.html  get_advanced.html  get_advanced_scripts.html  get_metadata.html  hdf5_time_parms.html  (+67 more)
madroot/source/madpy/djangoMad/madweb/templates/madweb/Templates/: doc_template.dwt
madroot/source/madpy/djangoMad/madweb/templates/madweb/madrigal/: admin.m.html  cedar.m.html  data.m.html  derivation.m.html  index.html  isprint.m.html  metadata.m.html  openmadrigal.m.html
madroot/source/madpy/djangoMad/madweb/templates/madweb/madrigal/ui/: index.html  madrigalPlot.m.html  userData.m.html  web.m.html
madroot/source/madpy/djangoMad/templates/: 404.html  500.html  base.html  base_exps.html  base_single.html  navbar.html  parm_popup.html
madroot/source/madpy/madrigal/: _Madrec.c  _Madrec.h  _derive.c  admin.py  cedar.py  data.py  derivation.py  isprint.py  metadata_original.py  openmadrigal.py
madroot/source/madpy/madrigal/ui/: __bgReport_original.py  isprintExe.py  madrigalPlot.py  report.py  userData.py  web.py
madroot/source/madpy/madrigal/ui/testFiles/: generateElScan.py  isprint_az_scan.txt  isprint_az_wedge_scan.txt  isprint_el_lat_wedge_scan.txt  isprint_el_lon_wedge_scan.txt  isprint_el_scan.txt  isprint_nel.txt  isprint_nel_histogram.txt  isprint_uth_fof2.txt  isprint_uth_fof2_error.txt  mlh060622a.000
madroot/source/madpy/scripts/regressionTests/: derivation_rock.txt  madrigalUnitTests.py  testAdminScripts.py  testCedarReadWrite.py  testCitationWebServices.py  testDerivation.py  testDerivationEngine.py  testDerivationEngine.rock.h5  testMadrigal.py  testUserScripts.py  testWebServices.py
(+51 files in other folders)
