[project]
name = "django_bootstrap_calendar"
version = "0.1.1"
description = "simple calendar based on the calendar of http://bootstrap-calendar.azurewebsites.net/"
authors = [
    {name = "Marcin Spoczynski", email = "marcin@spoczynski.com"}
]
license = {text = "BSD"}
readme = "README.rst"
keywords = ['django_bootstrap_calendar']
classifiers = [
        'Development Status :: 2 - Pre-Alpha',
        'Framework :: Django',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: BSD License',
        'Natural Language :: English',
        "Programming Language :: Python :: 2",
        'Programming Language :: Python :: 2.6',
        'Programming Language :: Python :: 2.7',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.3',
]
dependencies = ["jsmin"]

[project.urls]
"Homepage" = "https://github.com/sandlbn/django_bootstrap_calendar"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ['django_bootstrap_calendar']
