[project]
name = "django-bootstrap3-datetimepicker"
version = "2.2.3"
description = "Bootstrap3 compatible datetimepicker for Django projects."
authors = [
    {name = "Nakahara Kunihiko", email = "nakahara.kunihiko@gmail.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.rst"
classifiers = [
        'Intended Audience :: Developers',
        'License :: OSI Approved :: Apache Software License',
        'Programming Language :: Python',
        'Programming Language :: Python :: 2',
        'Programming Language :: Python :: 3',
        'Operating System :: OS Independent',
        'Topic :: Software Development :: Libraries',
        'Topic :: Utilities',
        'Environment :: Web Environment',
        'Framework :: Django',
]

[project.urls]
"Homepage" = "https://github.com/nkunihiko/django-bootstrap3-datetimepicker"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ['bootstrap3_datetime']
